fix text and add blendin and Doneer logo

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -14,18 +14,20 @@ nl:
       title: "Share your network"
     index:
       title: "Doneer je netwerk!"
-      body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiele duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin Work! Hoe ziet dit eruit? <br /><br /><br /> Binnenkort starten wij een pilot van 50 nieuwkomers en 50 Nederlanderse netwerk donateurs. Meld je nu snel aan, want dan maak je de grootste kans om deel uit te maken van onze pilotfase!<br /><br /><br />Blendin is een stichting met als hoofddoel het creëren van duurzame vriendschappen tussen nieuwkomers (vluchtelingen) en locals. Naast de behoefte aan vriendschappen zag Blendin dat nieuwkomers grote behoefte hebben aan contacten die hen wegwijs kunnen maken op de Nederlandse arbeidsmarkt. Het opbouwen van een zakelijk netwerk is voor hen van cruciaal belang om werk te vinden in Nederland."
+      body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiële duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin Work! Hoe ziet dit eruit? <br />Binnenkort starten wij een pilot van 50 nieuwkomers en 50 Nederlandse netwerk donateurs. Meld je nu snel aan, want dan maak je de grootste kans om deel uit te maken van onze pilotfase!"
       step_title: "HOE DOE JE MEE?"
-      step_two: "Stap 2: Wij matchen jou met een nieuwkomer dat op zoek is naar een baan die aansluit op jouw netwerk"
-      step_three: "Stap 3: Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen"
-      step_four: "Stap 4: Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en hopelijk sollicitaties!"
+      step_one: "Stap 1: Meld je aan als Netwerk Donateur, beschrijf jouw sector, functie en netwerk."
+      step_two: "Stap 2: Wij matchen jou met een nieuwkomer dat op zoek is naar een baan die aansluit op jouw netwerk."
+      step_three: "Stap 3: Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen."
+      step_four: "Stap 4: Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en sollicitaties."
+      step_five: "Stap 5: De nieuwkomer gaat vervolgens koffie drinken met jouw contacten, op werkbezoek of sollicitatie. Zo vergroten we diens netwerk en daarmee de kans op werk!"
       action: "Doe mee & doneer je netwerk!"
     form:
         fullname: "Naam en achternaam"
         fullname_placeholder: ""
         sector: "Beschrijf jouw sector en functie 💼"
         sector_placeholder: ""
-        network: "Beschrijf jouw netwerk 👔"
+        network: "In welke andere sectoren heb je og meer een breed netwerk? 👔"
         network_placeholder: ""
         email: "Email ✉️"
         email_placeholder: "lorem@gmail.com"
