Small changes like phone placeholder and flags

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,7 @@ en:
         birthday_label: "Geboorte datum 🎂:"
         phone_label: "Telefoon nummer 📱:"
         phone_placeholder: "Bijv. 0612345678"
+        phone_helper: "This number only becomes visible to other users once your blend request gets accepted or you accept your request."
         about_label: "Vertel meer over jezelf 💬: "
         about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
         submit_btn: "Bevestig"
@@ -89,7 +90,7 @@ en:
       birthday_label: "🎂 Date of Birth:"
       address_label: "🌇 Where do you live?"
       address_placeholder: "Ex. Amsterdam, Netherlands"
-      country_label: "🇸🇾 🇳🇱 Country of origin:"
+      country_label: "🌎 Country of origin:"
       country_placeholder: "Ex. Syria"
       interest_label: "📙 Choose your interest from the list:"
       interest_helper: "(Choose at least three interest form the list. The more the better.)"
