--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -46,6 +46,7 @@ nl:
         birthday_label: "Geboorte datum 🎂:"
         phone_label: "Telefoon nummer 📱:"
         phone_placeholder: "Bijv. 0612345678"
+        phone_helper: "Dit nummer is pas zichtbaar voor andere gebruikers als je blend verzoek geaccepteerd wordt of jij je verzoek accepteerd"
         about_label: "Vertel meer over jezelf 💬: "
         about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
         submit_btn: "Bevestig"
@@ -94,7 +95,7 @@ nl:
       birthday_label: "Geboorte datum 🎂:"
       address_label: "Waar woon je? 🌇"
       address_placeholder: "Bijv. Amsterdam"
-      country_label: "Land van herkomst 🇸🇾 🇳🇱:"
+      country_label: "Land van herkomst 🌎:"
       country_placeholder: "Bijv. Syrie"
       interest_label: "Kies jouw interesses uit deze lijst 📙"
       interest_helper: "(Kies minstens 3 interesses. Hoe meer hoe beter! )"
