--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -46,7 +46,7 @@ nl:
         birthday_label: "Geboorte datum 🎂:"
         phone_label: "Telefoon nummer 📱:"
         phone_placeholder: "Bijv. 0612345678"
-        phone_helper: "Dit nummer is pas zichtbaar voor andere gebruikers als je blend verzoek geaccepteerd wordt of jij je verzoek accepteerd"
+        phone_helper: "Dit nummer is pas zichtbaar voor andere gebruikers als je blend verzoek geaccepteerd wordt of jij je verzoek accepteerd."
         about_label: "Vertel meer over jezelf 💬: "
         about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
         submit_btn: "Bevestig"
@@ -106,6 +106,7 @@ nl:
       phone_placeholder: "Bijv. 0612345678"
       about_label: "Vertel meer over jezelf 💬: "
       about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
+      phone_helper: "Dit nummer is pas zichtbaar voor andere gebruikers als je blend verzoek geaccepteerd wordt of jij je verzoek accepteerd."
       submit_btn: "Bevestig en ga door"
       introjs_step_1_html: data-intro="Kies op ‘Local’ als je je thuis voelt in Nederland en op zoek bent naar contact met mensen die nieuw zijn in Nederland."
       introjs_step_2_html: data-intro="Kies hier ‘nieuwkomer’ als je niet opgegroeid bent in Nederland en op zoek ben naar contact met Nederlanders."
