--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -14,6 +14,11 @@ nl:
     work: "Hoe het werkt"
     donate: "Doneren"
     news: "Nieuws"
+  pages:
+    donate:
+      title: "Steun ons en maak een verschil!"
+      lead: "Voor zowel nieuwkomers als Nederlanders is het van groot belang dat de kloof tussen deze twee groepen gedicht gaat worden. Met hulp van een grote groep mensen zijn we al druk bezig om onze doelen te verwezenlijken. Dank is groot!"
+      cta: "Doneer nu!"
   networks:
     new:
       title: "Share your network"
