add css for share my network page

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -26,11 +26,11 @@ nl:
       title: "Doneer je netwerk!"
       body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiële duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin Work! Hoe ziet dit eruit? <br />Binnenkort starten wij een pilot van 50 nieuwkomers en 50 Nederlandse netwerk donateurs. Meld je nu snel aan, want dan maak je de grootste kans om deel uit te maken van onze pilotfase!"
       step_title: "HOE DOE JE MEE?"
-      step_one: "Stap 1: Meld je aan als Netwerk Donateur, beschrijf jouw sector, functie en netwerk."
-      step_two: "Stap 2: Wij matchen jou met een nieuwkomer dat op zoek is naar een baan die aansluit op jouw netwerk."
-      step_three: "Stap 3: Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen."
-      step_four: "Stap 4: Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en sollicitaties."
-      step_five: "Stap 5: De nieuwkomer gaat vervolgens koffie drinken met jouw contacten, op werkbezoek of sollicitatie. Zo vergroten we diens netwerk en daarmee de kans op werk!"
+      step_one: "<strong>Stap 1:</strong> Meld je aan als Netwerk Donateur, beschrijf jouw sector, functie en netwerk."
+      step_two: "<strong>Stap 2:</strong> Wij matchen jou met een nieuwkomer dat op zoek is naar een baan die aansluit op jouw netwerk."
+      step_three: "<strong>Stap 3:</strong> Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen."
+      step_four: "<strong>Stap 4:</strong> Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en sollicitaties."
+      step_five: "<strong>Stap 5:</strong> De nieuwkomer gaat vervolgens koffie drinken met jouw contacten, op werkbezoek of sollicitatie. Zo vergroten we diens netwerk en daarmee de kans op werk!"
       action: "Doe mee & doneer je netwerk!"
     form:
         fullname: "Naam en achternaam"
