delete subscribe message when event is full

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -433,5 +433,6 @@ nl:
       subscribe: "Attend"
       see_more: "See More"
       spaces_available: "spaces available"
+      event_full: "This event is full!"
     _card_my_event:
       cantattend: "Cannot attend"
