--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -209,5 +209,6 @@ en:
       subscribe: "Attend"
       see_more: "See More"
       spaces_available: "spaces available"
+      event_full: "This event is full!"
     _card_my_event:
       cantattend: "Cannot attend"
