Adding some translation

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -9,11 +9,38 @@ nl:
       community_link: "Community"
       my_blends_link: "Mijn blends"
       settings_link: "Instellingen"
+  dashboard:
+    index:
+      events_card_title: "Meet Blenders"
+      events_card_subtitle: "Attend unique events and meet Blenders who share your interests and are interested in developing the Blendin community.."
+      talent_teach_card_title: "Teach My Talent"
+      talent_teach_card_subtitle: "Offer to teach a skill, interest, or hobby to other Blendin members."
+      talent_learn_card_title: "Learn a Talent:"
+      talent_learn_card_subtitle: "Find an exciting new skill to learn from another Blendin member."
+      donate_card_title: "Donate"
+      donate_card_subtitle: "Your contributions directly impact Blendin's community outreach and our ability to create opportunities for newcomers and locals alike."
+      network_card_title: "Share Your  Network:"
+      network_card_subtitle: "Is your company hiring? Blendin's special matching process has allowed us to help place 50 (?)  newcomers into career opportunities throughout the Netherlands."
+      partner_card_title: "Become a Partner:"
+      partner_card_subtitle: "Does your company want to do more to help support the Blendin community? We are open to accepting new collaborations now."
   footer:
+    about: "About Blendin"
     team: "Ons team"
+    mission: "Mission Statement"
+    news: "Nieuws"
+    gallery: "Gallery"
     work: "Hoe het werkt"
     donate: "Doneren"
-    news: "Nieuws"
+    support: "Support"
+    contact: "Contact Us"
+    privacy: "Privacy Policy & Terms of Use"
+    involvement: "Involvement"
+    meet: "Meet Blenders"
+    teach: "Teach A Talent"
+    learn: "Learn A Talent"
+    share: "Share Your Network"
+    partner: "Become A Partner"
+    languages: "Select a language"
   pages:
     donate:
       title: "Steun ons en maak een verschil!"
